Change order of index

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ and I’m pleased to have you here.  Here at my website I showcase my
 work to my friends, peers, and random people like you.  I appreciate
 the recognition.  I’m looking forward to new things and an exciting
 future.  Let's hope for a big year. Anyway, go and have fun exploring
-my website! 
+my website. 
 
 <br><br>
 <b>Look at the sketches I made with P5.js!</b>
@@ -59,28 +59,7 @@ my website!
 		  <img src="./Assets/Images/Noim.jpg" width="200px"></img>
         </section>
 
-	<section class="Col2PicLeft">
-	    <img src="./Assets/Images/Noim.jpg" width="200px"></img>
-<p>Hey, I'm Deverell Manning.  As you continue to read, I might as well
-tell you more about me.  I'm a christian fox currently living in the western
-United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints,
-and I might be a content creator with a website.  I love drawing animals doing 
-people things.  I'm trying hard to use and grow this website to it's full potential,
-but being busy, it is taking a long time.  My hobbies and intrests include drawing, programming,
-Interactive Fiction, writing, model-building, and minecraft.  I also enjoy reading,
-so I'm open to book suggestions.  I have expeirience in C++, HTML/CSS/JS, bash, and
-some java, fairly well.  I'm also looking into how I can progress my knowlege and skills
-in computer developement.  Lastly, I am a beginning tennis player and lucid dreamer.
-For more about me, visit my <a href="./About.html">About</a> page.
-</p>
-
-	    <br>
-	    <span>
-		<a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</a>
-	    </span>
-	</section>
-		
-        <section>
+<section>
 	    <h3>Navigation:</h3>
 		<table class="Nav-Table">
 		    <tr>
@@ -119,11 +98,32 @@ For more about me, visit my <a href="./About.html">About</a> page.
 		<i>*Coming Soon</i> - <i title="Everything is a minor work in Progress, unless otherwise specified.">†Work in Progress</i>
         </section>
 
+	<section class="Col2PicLeft">
+	    <img src="./Assets/Images/Noim.jpg" width="200px"></img>
+<p>Hey, I'm Deverell Manning.  As you continue to read, I might as well
+tell you more about me.  I'm a christian fox currently living in the western
+United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints,
+and I might be a content creator with a website.  I love drawing animals doing 
+people things.  I'm trying hard to use and grow this website to it's full potential,
+but being busy, it is taking a long time.  My hobbies and intrests include drawing, programming,
+Interactive Fiction, writing, model-building, and minecraft.  I also enjoy reading,
+so I'm open to book suggestions.  I have expeirience in C++, HTML/CSS/JS, bash, and
+some java, fairly well.  I'm also looking into how I can progress my knowlege and skills
+in computer developement.  Lastly, I am a beginning tennis player and lucid dreamer.
+For more about me, visit my <a href="./About.html">About</a> page.
+</p>
+
+	    <br>
+	    <span>
+		<a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a>  -  <a href="https://deverellmanning.github.io/Projects/perchance.html">⚄︎</a>
+	    </span>
+	</section>
+
 	<section class=Col3PicCent>
 	    <div>
 		<h3>Do You like what I do?</h3>
-		<p>If so, please visit my <b><a href="./Community.html">community page!</a></b>
-		    <b></b>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More!</li></ul>
+		<p>If so, please visit my <b><a href="./Community.html">community page.</a></b>
+		    <b></b>For:<ul><li>Commisions</li><li>Comments</li><li title="Who'd want to do this?">Donations</li><li>Suggestions</li><li>Feedback</li><li>And More.</li></ul>
 		</p>
 	    </div>
 
