Update November 1st
Gallery Improvements,
Space Colonization Essay, and
other changes.

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ permalink: /404.html
 <!doctype HTML>
 <HTML>
 <head>
-    <title>4 0 4</title>
+    <title>Page not found!</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -17,12 +17,12 @@ permalink: /404.html
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="https://deverellmanning.github.io/Assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="https://deverellmanning.github.io/Assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/Assets/CSS/Global.css">
+    <link rel="stylesheet" type="text/css" href="/Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
 
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
@@ -36,25 +36,26 @@ permalink: /404.html
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>404</h1>
-                <h3>Page not Found</h3>
+                <h1>Page is missing!</h1>
+                <h3>Can you help me find Page?</h3>
             </div>
         </section>
 
         <section>
           <br>
-          <h4>PAGE NOT FOUND</h4><br>Sorry.
-    <a href="https://deverellmanning.github.io/">Return to index<</a>
+          <h4>Oh No! Page is missing <i>again!</i></h4>
+	  <br>
+    	  <a href="https://deverellmanning.github.io/">Let's start looking here.</a>
       <br>
       What does 404 mean?
       Go to <a href="https://en.wikipedia.org/wiki/HTTP_404">Wikipedia Article</a> to find out!<br><br>
         </section>
 
         <section class="Footer">
-            "<quote>Quote</quote>"
-            <address><a href="">deverellmanning.github.io</a></address>
+            <quote>"Quote"</quote>
+            <address><a href="/">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 3/31/2022</hi>
+            <hi>Last Updated: 10/13/2023</hi>
             <hr />
         </section>
 
