--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -184,7 +184,7 @@
 </page>
 
   <div class="Sidebar">
-      <iframe src="https://deverellmanning.github.io/Utility/Sidebar.html" title="Sidebar"></iframe>
+      <iframe src="/Utility/Sidebar/Global.html" title="Sidebar"></iframe>
 
       <div class="Puller" title="pull me!">•<br>•<br>•<br></div>
   </div>
