Addition of Pictures to Gallery
Cliffs / Clouds
House project

--- a/Gallery/Gallery.html
+++ b/Gallery/Gallery.html
@@ -53,8 +53,63 @@
       <section>
       <!-- ----- Start Gallery Table ----- -->
       <div class="Gallery">
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/ANMP0208.jpg">
+  <img src="./t.png" class="tp">
+  <name>Some Clouds</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/ANMP0212.jpg">
+  <img src="./t.png" class="tp">
+  <name>Some Clouds</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/ANMP0205.jpg">
+  <img src="./t.png" class="tp">
+  <name>Some Clouds</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/ANMP0199.jpg">
+  <img src="./t.png" class="tp">
+  <name>Some Clouds</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/1-17-2024_House-Project-Back-Porch.png">
+  <img src="./t.png" class="tp">
+  <name>HOUSE/Eligotextum</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/1-17-2024_House-Project-Back-Yard.png">
+  <img src="./t.png" class="tp">
+  <name>HOUSE/Eligotextum</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
  
- 
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/1-17-2024_House-Project-Standing-Room.png">
+  <img src="./t.png" class="tp">
+  <name>HOUSE/Eligotextum</name>
+  <date>Janurary 2024</date>
+  <disc></disc>
+</figure>
+
 <figure onclick="Zoom3(this);" id="c20">
   <img src="./Images/Small/Arina_Ref.png">
   <img src="./t.png" class="tp">
