Upload bad piggies

--- a/Projects.html
+++ b/Projects.html
@@ -58,12 +58,6 @@
 		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
-		<td>Raspberry Pi Picture Frame</td>
-		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!</td>
-		<td>??</td>
-	</tr>
-	<tr>
 		<td><i class="fa fa-pause-circle" title="Stasis"></td>
 		<td>Eligotextum</td>
 		<td>Interactive fiction Card Game</td>
@@ -93,6 +87,12 @@
 		<td>See P5.js sketches.</td>
 		<td>??</td>
 	</tr>
+	<tr>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
+		<td>Raspberry Pi Picture Frame</td>
+		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!</td>
+		<td>??</td>
+	</tr>
         <tr>
 		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
 		<td>Hourly Chime/Room Ambiance</td>
@@ -105,7 +105,7 @@
 		<td>Worked out pretty well. Used CTGP Revolution.</td>
 		<td>??</td>
 	</tr>
-	<i>List may not be complete at alll times.</i>
+	<i>List may not be complete at all times.</i>
 
 </tbody></table><hr></section>
 
