--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ For more about me, visit my <a href="./About.html">About</a> page.
 	</section>
 
         <section class="Footer">
-	    <img src="./Assets/Images/DM-Logo-v2.jpg" />
+	    <img src="./Assets/Images/DM-Logo-v2.png" />
 	    <div>
             <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
