Working towards better website
 - Removing old stuff
 - Improved Footer CSS
 - Working on lowercase names
 - Going toward Dated Pages idea

--- a/404.html
+++ b/404.html
@@ -17,8 +17,8 @@ permalink: /404.html
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="/Assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/Assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/CSS/Global.css">
+    <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
