--- a/Community.html
+++ b/Community.html
@@ -15,8 +15,8 @@
     <base href="" target="_blank"/>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/CSS/styel.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
 </head>
 <body>
     <div class="Sidebar">
