--- a/Gallery/Notepad.html
+++ b/Gallery/Notepad.html
@@ -4,7 +4,7 @@
     <title>Notepad - DM</title>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./../Assets/CSS/styel.css" />
+    <link rel="stylesheet" type="text/css" href="./../assets/CSS/styel.css" />
     <link rel="stylesheet" href="./M7.css" />
 </head>
 
@@ -17,7 +17,7 @@
             <a href="https://surveynuts.com/surveys/take?id=226677&amp;c=10293855941FRNJ&amp;page=view" style="margin:0px;">
                 <abbr title="Please take this survey!">
                     <figure style="margin: 0px; background:grey">
-                        <img src="./../Assets/Images/Survey Pic.jpg" alt="SURVEY">
+                        <img src="./../assets/Images/Survey Pic.jpg" alt="SURVEY">
                         <figcaption>Click to take survey about my Website.</figcaption>
                     </figure>
                 </abbr>
