--- a/Topics/SpaceExploration/index.html
+++ b/Topics/SpaceExploration/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section class="Footer">
-	    <img src="/Assets/Images/DMLogo_v1.jpg" />
+	    <img src="/Assets/Images/DM-Logo-v2.png" />
             <quote>"Quote"</quote>
             <address><a href="/index.html">deverellmanning.github.io</a></address>
             <br />
