--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="./Assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
+    <link rel="stylesheet" href="./assets/CSS/Global.css">
+    <link rel="stylesheet" type="text/css" href="./assets/CSS/styel.css" />
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
-    <script src="./Assets/Backgrounds/BGRAND.js"></script>
+    <script src="./assets/backgrounds/BGRAND.js"></script>
 
 </head>
 <body onload="randBG()">
@@ -56,7 +56,7 @@ my website.
 </p>
 
 
-		  <img src="./Assets/Images/Noim.jpg" width="200px"></img>
+		  <img src="./assets/Images/Noim.jpg" width="200px"></img>
         </section>
 
 <section>
@@ -99,7 +99,7 @@ my website.
         </section>
 
 	<section class="Col2PicLeft">
-	    <img src="./Assets/Images/Noim.jpg" width="200px"></img>
+	    <img src="./assets/Images/Noim.jpg" width="200px"></img>
 <p>Hey, I'm Deverell Manning.  As you continue to read, I might as well
 tell you more about me.  I'm a christian fox currently living in the western
 United States.  I'm a member of the Church of Jesus Christ of Latter Day Saints,
@@ -143,7 +143,7 @@ For more about me, visit my <a href="./About.html">About</a> page.
 	</section>
 
         <section class="Footer">
-	    <img src="./Assets/Images/DM-Logo-v2.png" width="128" height="128"/>
+	    <img src="./assets/Images/DM-Logo-v2.png" width="128" height="128"/>
 	    <div>
             <quote>"That's rough, buddy.<br>-Zuko, Avatar:The Last Airbender"</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
