--- a/news.html
+++ b/news.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="noindex, nofollow"><!-- change to all to show up on google -->
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/Assets/CSS/styel.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/assets/CSS/styel.css">
 
 </head>
 <body>
