--- a/old/Friends/index.html
+++ b/old/Friends/index.html
@@ -12,20 +12,20 @@
 
     <meta name="robots" content="none" />
 
-    <base href="" target="_blank"/>
+    
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./styel.css" />
+    <link rel="stylesheet" type="text/css" href="https://deverellmanning.github.io/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Navigation/Sidebar.html" title="Iframe Example"></iframe>
-
+        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        
         <div class="Puller">•<br>•<br>•<br></div>
     </div>
 
     <div class="Topbar">
-        <span class="left"></span>
+        <span class="left">Freinds!</span>
         <span class="cent"></span>
         <span class="right"></span>
     </div>
@@ -33,19 +33,26 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1>Really Cool</h1>
-                <h3>Coming Soon...</h3>
+                <h1>Freinds</h1>
+                <h3>Plans, Projects, and More</h3>
             </div>
         </section>
 
         <section>
+          <h3 title="To this Page">Coming Soon:</h3>
+          <ul>
+            <li>Calander</li>
+            <li>Chat</li>
+            <li>Links</li>
+          </ul>
         </section>
 
         <section class="Footer">
+          <img src="./Assets/Images/DM-Logo-v2.png" />
             "<quote>Quote</quote>"
             <address><a href="">deverellmanning.github.io</a></address>
             <br />
-            <hi>Last Updated: 4/26/2022</hi>
+            <hi>Last Updated: 5/14/2022</hi>
             <hr />
         </section>
 
