--- a/Gallery/GTest.html
+++ b/Gallery/GTest.html
@@ -15,8 +15,8 @@
 
   <!--<base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/">-->
 
-  <link rel="stylesheet" href="/Assets/CSS/Global.css">
-  <link rel="stylesheet" type="text/css" href="/Assets/CSS/styel.css" />
+  <link rel="stylesheet" href="/assets/CSS/Global.css">
+  <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
   <link rel="stylesheet" href="./image.css">
   <link rel="stylesheet" href="./xpand.css">
 </head>
@@ -164,7 +164,7 @@
 </section>
       
               <section class="Footer">
-	    <img src="/Assets/Images/DMLogo_v1.jpg" />
+	    <img src="/assets/Images/DM-Logo-v2.png" />
 	    <div>
         <quote>
           "I laugh at gravity all the time. Hahaha, gravity."
