--- a/Projects.html
+++ b/Projects.html
@@ -15,7 +15,7 @@
     <base href="" target="_blank"/>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/CSS/styel.css" />
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -110,7 +110,7 @@
 </tbody></table><hr></section>
 
 <section class="Footer">
-	<img src="./Assets/Images/DMLogo_v1.jpg" />
+	<img src="./assets/Images/DM-Logo-v2.png" />
             <quote>"Couldn't Find a Good Quote Today, so: Sorry!"</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br>
