- modified:   about.html  - modified:   assets/css/styel.css  - Edited checkers.jpg background so it tiles better  - Added filler pictures  - Added site icons for  accounts I have  - Added Chris to Gallery  - Improved index.html  - Added Sitemap  - General cleanup and url fixes
 - Remade sidebar so it is actually usefull
 - Added more projects
 - made main paper index
 - linked up papers

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <HTML>
 <head>
-    <title>About Feltrush Laundry</title>
+    <title>About - Feltrush Laundry</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -12,16 +12,14 @@
 
     <meta name="robots" content="none" />
 
-    <base href="" target="_blank"/>
-
-    <link rel="stylesheet" href="/assets/css/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">">
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="/utility/sidebar/global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
 
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
@@ -76,6 +74,7 @@
         </section>
 
         <section class="Footer">
+            <img class="logo" src="/assets/images/DM-Logo-v2.png">
             <quote>"Imagine break-dancing penguins sliding down an icy hillside rapping an opera.</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br />
