--- a/community.html
+++ b/community.html
@@ -15,14 +15,14 @@
     <base href="" target="_blank"/>
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
     <link rel="stylesheet" type="text/css" href="./assets/CSS/HTMLCOMMENTBOXSTYLES.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
 
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
@@ -74,7 +74,7 @@ if(window.Squarespace){
 }
 </script><div class="sil-widget-chatroom sil-widget" id="sil-widget-6247b915de6f07001ff31ff5"><admin></admin><chatroom><div class="chatroom-modal chatbox"> <div class="chatbox-header chatbox-primary primary-color"> <p class="chatbox-header-title"> Public chatroom!</p> <div class="chatbox-header-settings"> <div data-toggle="tooltip" title="Only you see this button" class="btn-admin-wrap" id="admin-btn6247b915de6f07001ff31ff5"> <img class="chatroom-engine" alt="chatbox engine" src="https://bawkbox.com/widget-static/svg/chatbox-icons/engine.svg"> </div> </div> </div> <div id="content">  <div class="chatbox-content" id="messages_list" name="messages_list">   <p class="sender primary-color">You: Testing</p>  </div> <div id="feedback" name="feedback" style="margin-bottom:0"></div> <div id="options" class="chatbox-message-area"> <textarea name="message" cols="30" rows="10" class="chatbox-message-textarea" placeholder="Type a message"></textarea> <div class="chatbox-message-footer"> <a class="chatbox-disclaimer" href="http://bawkbox.com" target="_blank"> <span class="chat-powered-by-text"> Get a Public Chatroom widget. ©</span> <img class="bawkbox-powered-by-logo" src="https://bawkbox.com/widget-static/svg/components/widget-logo.svg"> </a> <div class="chatbox-message-footer-buttons"> <button name="send_btn" class="chatbox-message-footer-button chatbox-send primary-color">SEND</button> </div> </div> </div> </div> <modal><div class="modal-widget fade" tabindex="-1" role="dialog" id="modal-main-container6247b915de6f07001ff31ff5"> <div class="modal-dialog"> <div class="modal-content"> <div class="modal-header"> <div class="modal-title"> <h5></h5>  </div> </div> <form>  <div class="modal-footer">  <button type="submit" class="btn btn-submit-title"> OK </button> </div> </form> <a href="#close-modal" rel="modal:close" class="close-modal"> Close </a> </div> </div> </div></modal> </div></chatroom></div><!-- End BawkBox Code--></div>
         <section class="Footer">
-            "<quote>Quote</quote>"
+            <quote></quote>
             <address><a href="">deverellmanning.github.io</a></address>
             <br />
             <hi>Last Updated: 1/18/2022</hi>
