--- a/papers/index.html
+++ b/papers/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <HTML>
 <head>
-    <title></title>
+    <title>Papers - Feltrush Laundry</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -12,14 +12,12 @@
 
     <meta name="robots" content="none" />
 
-    
-
-    <link rel="stylesheet" href="/assets/css/global.css">">
-    <link rel="stylesheet" href="/assets/css/styel.css">" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Global Sidebar"></iframe>
         
         <div class="Puller"></div>
     </div>
@@ -33,17 +31,23 @@
     <Page class="MainContent">
         <section>
             <div class="Title">
-                <h1></h1>
-                <h3></h3>
+                <h1>Papers</h1>
+                <h3>Index</h3>
             </div>
         </section>
 
         <section>
+<ul>
+<li><a href="./2024/4-these-are-papers">These Are Papers</li>
+<li><a href="./2024/3-egg-hunt">Egg Hunt</a></li>
+<li><a href="./2024/1-why-we-need-to-colonize">Why we need to colonize space</a></li>
+</ul>
+
         </section>
 
         <section class="Footer">
-	    <img class="logo" src="/assets/images/DM-Logo-v2.png">
-            <quote>"Quote"</quote>
+	    <img class="logo" src="/assets/images/DM-Logo-v2.png" />
+            <quote>"...exist with the natural rythems of the world..."</quote>
             <address><a href="/index.html">deverellmanning.github.io</a></address>
             <br />
             <hi>Last Updated: 10/13/2023</hi>
