--- a/projects/Terrarium/index.html
+++ b/projects/Terrarium/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
         
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
