--- a/projects/perchance.html
+++ b/projects/perchance.html
@@ -14,14 +14,14 @@
 
     
 
-    <link rel="stylesheet" href="/assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">">
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
         
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
@@ -45,7 +45,7 @@
         </section>
 
         <section class="Footer">
-  	    <img class="logo" src="/assets/Images/DM-Logo-v2.png"/>
+  	    <img class="logo" src="/assets/images/DM-Logo-v2.png">
             <quote>"Anyone who considers arithmetical methods of producing random digits is, of course, in a state of sin."<br>
             ― John von Neumann</quote>
             <hr />
