--- a/topics/farax/index.html
+++ b/topics/farax/index.html
@@ -15,13 +15,13 @@
     
 
     <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/Assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
         
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
