--- a/utility/404.html
+++ b/utility/404.html
@@ -17,14 +17,14 @@ permalink: /404.html
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="/assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">">
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
 </head>
 <body>
     <div class="Sidebar">
-        <iframe src="/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
 
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
