--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -15,8 +15,8 @@
 
   <!--<base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/">-->
 
-  <link rel="stylesheet" href="/assets/CSS/Global.css">
-  <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">">
+    <link rel="stylesheet" href="/assets/css/styel.css">" />
   <link rel="stylesheet" href="./image.css">
   <link rel="stylesheet" href="./xpand.css">
 </head>
@@ -44,7 +44,7 @@
         I also post other pictures, like games of chess that I win.
       </p>
       <p>
-        <b>Note:</b>Some of the pictures/scans are high-res, and can take a long time to load.
+        <b>Note:</b>Some of the pictures/scans are high-res, and take a long time to load.
       </p>
       <br>
     </section>
@@ -53,6 +53,14 @@
       <section>
       <!-- ----- Start Gallery Table ----- -->
       <div class="Gallery">
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/Chris.png">
+  <img src="./t.png" class="tp">
+  <name>Chris</name>
+  <date>June 2024</date>
+  <disc></disc>
+</figure>
 
 <figure onclick="Zoom3(this);">
   <img src="./Images/Small/ANMP0208.jpg">
@@ -219,7 +227,7 @@
 </section>
       
               <section class="Footer">
-	    <img src="/assets/Images/DM-Logo-v2.png" />
+	    <img class="logo" src="/assets/images/DM-Logo-v2.png">
 	    <div>
         <quote>
           "I laugh at gravity all the time. Hahaha, gravity."
@@ -239,9 +247,9 @@
 </page>
 
   <div class="Sidebar">
-      <iframe src="/Utility/Sidebar/Global.html" title="Sidebar"></iframe>
+      <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
 
-      <div class="Puller" title="pull me!">•<br>•<br>•<br></div>
+      <div class="Puller"></div>
   </div>
   
   
