--- a/projects/P5-Sketches/index.html
+++ b/projects/P5-Sketches/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <HTML>
 <head>
-    <title></title>
+    <title>P5.JS Sketches - Feltrush Laundry</title>
 
     <meta charset="UTF-8">
     <meta name="description" content="">
@@ -14,14 +14,14 @@
 
     
 
-    <link rel="stylesheet" href="/assets/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/CSS/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
         <iframe src="/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
         
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
