--- a/projects/index.html
+++ b/projects/index.html
@@ -14,19 +14,20 @@
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styel.css" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/styel.css">
     <script src="https://kit.fontawesome.com/f82bfa79a8.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="Sidebar">
-        <iframe src="https://deverellmanning.github.io/Utility/Sidebar/Global.html" title="Global Sidebar"></iframe>
+        <iframe src="/utility/sidebar/global.html" title="Site-wide Sidebar Iframe"></iframe>
 
-        <div class="Puller">•<br>•<br>•<br></div>
+        <div class="Puller"></div>
     </div>
 
     <div class="Topbar">
-	    <span class="left"><a href="deverellmanning.github.io">Home</a></span>
+	<span class="left"><a href="/">Home</a></span>
         <span class="cent"></span>
         <span class="right"></span>
     </div>
@@ -38,83 +39,86 @@
                 <h3>Things done, doing, not doing and to do</h3>
             </div>
 
-	<table class="FullWidth LightTable">
 		<!--
 <i class="fa fa-plus-circle" title="Future">
 <i class="fa fa-pause-circle" title="Stasis">
 <i class="fa-solid fa-screwdriver-wrench" title="In-Progress">
 <i class="fa-regular fa-circle-check" title="Finished">
 		-->
+
+	<table class="FullWidth LightTable">
 	<tbody><tr>
 		<th>Status</th>
 		<th>Project</th>
 		<th>Description</th>
-		<th><abbr title="Estimated Date for starting the project, finishing the project, bringing the project out of statis, or past date when it was finished.">Est. Date</abbr></th>
+		<!--<th></th>-->
+	</tr>
+        <tr>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></i></td>
+		<td>Website Overhall</td>
+		<td>Almost done!</td>
+	</tr>
+        <tr>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></i></td>
+		<td>Drawings Of Freinds</td>
+		<td>Still figuring out the format.</td>
+	</tr>
+        <tr>
+		<td><i class="fa fa-pause-circle" title="Stasis"></i></td>
+		<td>Liminal Exploration Story</td>
+		<td>Paused until I finish the website update.</td>
+
 	</tr>
 	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
-		<td>Exploration Bot #1</td>
-		<td>Drives around taking pictures.</td>
-		<td>??</td>
-	</tr>
-	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></i></td>
 		<td>Eligotextum</td>
 		<td>Interactive fiction Card Game</td>
-		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></i></td>
 		<td>HOUSE</td>
 		<td>File System Based <abbr title="Interactive Fiction">IF</abbr> world. See v1.</td>
-		<td>??</td>
+
 	</tr>
 	<tr>
-		<td></td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa-solid fa-screwdriver-wrench" title="In-Progress"></i></td>
 		<td>Terrarium</td>
 		<td>I'm building a cool, mossy terrarium!</td>
-		<td>??</td>
+
 	</tr>
 	<tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
+		<td><i class="fa fa-pause-circle" title="Stasis"></i></td>
 		<td>Custom Minecraft Model</td>
 		<td>With a custom player model mod.</td>
-		<td>??</td>
-	</tr>
-        <tr>
-		<td><i class="fa fa-pause-circle" title="Stasis"></td>
-		<td>Expiriments with gridworld</td>
-		<td>See P5.js sketches.</td>
-		<td>??</td>
 	</tr>
 	<tr>
-		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></i></td>
 		<td>Raspberry Pi Picture Frame</td>
-		<td>Personal Computer/Drawing Tablet/Ambient Music. Yay!</td>
-		<td>??</td>
+		<td>Personal Computer and Drawing Tablet.  It's been quite useful.</td>
+
 	</tr>
         <tr>
-		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></i></td>
 		<td>Hourly Chime/Room Ambiance</td>
 		<td>Still needs work, but proven.</td>
-		<td>??</td>
+
 	</tr>
         <tr>
-		<td><i class="fa-regular fa-circle-check" title="Finished"></td>
+		<td><i class="fa-regular fa-circle-check" title="Finished"></i></td>
 		<td>Mario Kart Modification</td>
 		<td>Worked out pretty well. Used CTGP Revolution.</td>
-		<td>??</td>
-	</tr>
-	<i>List may not be complete at all times.</i>
 
-</tbody></table><hr></section>
+	</tr>
+</tbody></table>
+<i>List may not be complete.</i>
+<hr></section>
 
 <section class="Footer">
-	<img src="./assets/Images/DM-Logo-v2.png" />
-            <quote>"Couldn't Find a Good Quote Today, so: Sorry!"</quote>
+	<img class="logo" src="/assets/Images/DM-Logo-v2.png" />
+            <quote>"You can't Japanese by yelling english."</quote>
             <address><a href="deverellmanning.github.io">deverellmanning.github.io</a></address>
             <br>
-            <hi>Last Updated: 10/08/2023</hi>
+            <hi>Last Updated: 7/6/2024</hi>
             <hr>
         </section></page>
 
