Some more improvements
 - Fixed page mistakes
 - Renamed old art show
 - Fixed sidebar links
 - Added anchor titles to media links in index

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 
     <meta name="robots" content="none" />
 
-    <link rel="stylesheet" href="/assets/css/global.css">">
-    <link rel="stylesheet" href="/assets/css/styel.css">" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/styel.css">
 </head>
 <body>
     <div class="Sidebar">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="Topbar">
-        <span class="left"></span>
+        <span class="left"><a href="/">Return to index</a></span>
         <span class="cent"></span>
         <span class="right"></span>
     </div>
