--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -13,10 +13,10 @@
   
   <meta name="robots" content="noindex, nofollow"><!--change to all to show up on google -->
 
-  <!--<base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/">-->
+  <!-- <base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/"> -->
 
-    <link rel="stylesheet" href="/assets/css/global.css">">
-    <link rel="stylesheet" href="/assets/css/styel.css">" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/styel.css">
   <link rel="stylesheet" href="./image.css">
   <link rel="stylesheet" href="./xpand.css">
 </head>
@@ -140,13 +140,6 @@
   <date>February 2023</date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c17">
-  <img src="./Images/Small/Boat_Of_A_Million_Years_Book.jpg">
-  <img src="./t.png" class="tp">
-  <name>Boat of a Million Years</name>
-  <date>February 2023</date>
-</figure>
-
 <figure onclick="Zoom3(this);" id="c16" title="DM vs Computer">
   <img src="./Images/Small/Chess_Win_2.jpg">
   <img src="./t.png" class="tp">
@@ -163,7 +156,7 @@
   <disc>DM vs Computer</disc>
 </figure>
 
-	      <figure onclick="Zoom3(this);" id="c14">
+<figure onclick="Zoom3(this);" id="c14">
   <img src="./Images/Small/EndOfSchool.png" alt="Time to Draw!">
   <img src="./t.png" class="tp">
   <name>School's(Finally) Over!</name>
@@ -204,13 +197,6 @@
   <img src="./Images/Small/Scan2021-11-12_204731_003.jpg" alt="description">
   <img src="./t.png" class="tp">
   <name>Bit of Rule Ideas</name>
-  <date></date>
-</figure>
-
-<figure onclick="Zoom3(this);" id="c7">
-  <img src="./Images/Small/Scan2021-11-12_204731_006.jpg" alt="description">
-  <img src="./t.png" class="tp">
-  <name>Story Page</name>
   <date></date>
 </figure>
 
