--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="robots" content="none">
     <base href="" target="_blank">
 
-    <link rel="stylesheet" href="/assets/css/global.css">">
-    <link rel="stylesheet" href="/assets/css/styel.css">">
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/styel.css">
     <script src="/assets/backgrounds/BGRAND.js"></script>
 </head>
 
@@ -43,10 +43,10 @@
                 <p>Welcome to Feltrush Laundry, the home of Deverell Manning.  Whether you're a friend or a curious searcher, it's cool that you're here.  This is where I showcase art, writing, and other creative content I've made.  I hope you enjoy it!</p>
 		
                 <div class="icon-list">
-                    <a href="https://github.com/DeverellManning"><img src="/assets/images/icons/github-mark.svg" alt="Github Account"></a>
-                    <a href="https://openprocessing.org/user/396382"><img src="/assets/images/icons/open-processing-logo.png" alt=""></a>
-                    <a href="/projects/perchance.html" alt=""><img src="/assets/images/icons/perchance-icon.jpg"></a>
-	            <a href="https://www.wikidot.com/user:info/deverell-manning" alt=""><img src="/assets/images/icons/wikidot-logo.png"></a>
+                    <a href="https://github.com/DeverellManning" title="Github"><img src="/assets/images/icons/github-mark.svg" alt="Github Account"></a>
+                    <a href="https://openprocessing.org/user/396382" title="Open Processing"><img src="/assets/images/icons/open-processing-logo.png" alt=""></a>
+                    <a href="/projects/perchance.html" title="Perchance Hub"><img src="/assets/images/icons/perchance-icon.jpg"></a>
+	            <a href="https://www.wikidot.com/user:info/deverell-manning" title="Github"><img src="/assets/images/icons/wikidot-logo.png"></a>
 
                 </div>
             </div>
@@ -72,11 +72,11 @@
 		<div class="scroll-box">
 		<pre>
 <a href="/papers/2024/4-these-are-papers">These Are Papers</a>
-    Article - 6/30/2024
+   June 2024
 <a href="/papers/2024/1-why-we-need-to-colonize">We Need To Colonize Space</a>
-    Article - 10/13/2023
+   October 2023
 <a href="/projects/P5-Sketches/">P5.JS Sketch Collection</a>
-    Javascript - 10/08/2023
+   October 2023
 		</pre>
 		</div>
 		
@@ -144,7 +144,7 @@
             <div>
                 <address>
                     <a href="deverellmanning.github.io">deverellmanning.github.io</a>
-                </address><hi>Last Updated: 7/6/2024</hi><br>
+                </address><hi>Last Updated: 7/7/2024</hi><br>
 <a href="http://virmir.com/pg.php" target="_blank"><img src="http://virmir.com/images/pg.gif" border="0"></a>
             </div>
         </section>
