--- a/projects/perchance.html
+++ b/projects/perchance.html
@@ -14,8 +14,8 @@
 
     
 
-    <link rel="stylesheet" href="/assets/css/global.css">">
-    <link rel="stylesheet" href="/assets/css/styel.css">" />
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/styel.css">
 </head>
 <body>
     <div class="Sidebar">
