--- a/utility/sidebar/sidenav.html
+++ b/utility/sidebar/sidenav.html
@@ -4,11 +4,11 @@
 </head><body>
 <h3>Navigation</h3>
 <ul>
-<li><a href="https://deverellmanning.github.io/">Main Page</a></li>
-<li><a href="https://deverellmanning.github.io/Gallery/Gallery.html">Gallery</a>
-<li><a href="https://deverellmanning.github.io/">Papers</a></li>
-<li><a href="https://deverellmanning.github.io/Projects.html ">Projects</a></li>
-<li><a href="https://deverellmanning.github.io/Community.html ">Community Page</a></li>
-<li><a href="https://deverellmanning.github.io/About.html">About</a></li>
+<li><a href="/">Main Page</a></li>
+<li><a href="/Gallery/Gallery.html">Gallery</a>
+<li><a href="/">Papers</a></li>
+<li><a href="/Projects.html ">Projects</a></li>
+<li><a href="/Community.html ">Community Page</a></li>
+<li><a href="/About.html">About</a></li>
 </ul>
 </body></html>
