Added Jade Fanart
Gallery Modifications:
 - expanded description text z-index raised
 - Width restricted to 15%

--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -55,6 +55,14 @@
       <div class="Gallery">
 
 <figure onclick="Zoom3(this);">
+  <img src="./Images/Small/jade_notext_2_cropped.png">
+  <img src="./t.png" class="tp">
+  <name>Jade from Recursion Comic</name>
+  <date>August 2024</date>
+  <disc>Jade is terrified of parties.<br><a href="https://recursioncomic.com/">Read the comic here!</a></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Chris.png">
   <img src="./t.png" class="tp">
   <name>Chris</name>
