--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	    </div>
 	    <div>
 		<h3 style="margin-top: 0.5em; margin-bottom: 0.5em;">New Pages</h3>
-		<div class="scroll-box">
+		<div id="new-pages" class="scroll-box">
 		<pre>
 <a href="/papers/2024/4-these-are-papers">These Are Papers</a>
    June 2024
