Summer Sketches pt 1
Working on adding summer sketches to gallery.
- Added all scans
- Gallery entries and thumbnails for dragon and fsy page 2.
- Removed unused id's.

--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -15,8 +15,8 @@
 
   <!-- <base src="https://deverellmanning.github.io/Gallery/" href="https://deverellmanning.github.io/Gallery/"> -->
 
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/styel.css">
+  <link rel="stylesheet" href="/assets/css/global.css">
+  <link rel="stylesheet" href="/assets/css/styel.css">
   <link rel="stylesheet" href="./image.css">
   <link rel="stylesheet" href="./xpand.css">
 </head>
@@ -31,7 +31,7 @@
 
 <section>
     <div class="Title">
-      <h1 title="Should be self explanetory...can I have a spell check please?">DM GALLERY</h1>
+      <h1 title="Should be self explanatory...can I have a spell check please?">DM GALLERY</h1>
       <h3> The place where I show off my <abbr title="create ~ verb;  1. make or cause to be or to become">creative</abbr> work!</h3>
     </div>
     </section>
@@ -40,7 +40,8 @@
       <p>
         <b>Welcome to my gallery!</b>
 
-        This is where <i>you</i> get to watch my drawing skills slowly improve.<br>
+	This is my semi-quality random image dump.  
+        You get to watch my drawing skills slowly improve.
         I also post other pictures, like games of chess that I win.
       </p>
       <p>
@@ -53,6 +54,23 @@
       <section>
       <!-- ----- Start Gallery Table ----- -->
       <div class="Gallery">
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-july-dragon.png">
+  <img src="./t.png" class="tp">
+  <name>Dragon Sketch</name>
+  <date>July 2024</date>
+  <disc>My sister helped me with this one.</disc>
+</figure>
+
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-june-fsy2.png">
+  <img src="./t.png" class="tp">
+  <name>FSY Sketches 2</name>
+  <date>June 2024</date>
+  <disc></disc>
+</figure>
 
 <figure onclick="Zoom3(this);">
   <img src="./Images/Small/jade_notext_2_cropped.png">
@@ -126,7 +144,7 @@
   <disc></disc>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c20">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Arina_Ref.png">
   <img src="./t.png" class="tp">
   <name>Arina Refrence</name>
@@ -134,21 +152,21 @@
   <disc>Drawn using Krita and XPen tablet.</disc>
 </figure>
  
-<figure onclick="Zoom3(this);" id="c19">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Eligotextum_House_1.png">
   <img src="./t.png" class="tp">
   <name>HOUSE/Eligotextum</name>
   <date>April 2023</date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c18">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Napoleon_Dynamite_Quote_Book.jpg">
   <img src="./t.png" class="tp">
   <name>Napoleon Dynamite Book</name>
   <date>February 2023</date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c16" title="DM vs Computer">
+<figure onclick="Zoom3(this);" title="DM vs Computer">
   <img src="./Images/Small/Chess_Win_2.jpg">
   <img src="./t.png" class="tp">
   <name>Chess Win #2</name>
@@ -156,7 +174,7 @@
   <disc>DM vs Computer</disc>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c15" title="DM vs Computer">
+<figure onclick="Zoom3(this);" title="DM vs Computer">
   <img src="./Images/Small/Chess_Win_1.jpg">
   <img src="./t.png" class="tp">
   <name>Chess Win #1</name>
@@ -164,7 +182,7 @@
   <disc>DM vs Computer</disc>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c14">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/EndOfSchool.png" alt="Time to Draw!">
   <img src="./t.png" class="tp">
   <name>School's(Finally) Over!</name>
@@ -172,14 +190,14 @@
   <disc>Featuring Delta.</disc>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c12">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Scan2021-11-12_204731_001.jpg">
   <img src="./t.png" class="tp">
   <name>Reading</name>
   <date>11/11/2021</date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c11">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Pic1.jpg" alt="description">
   <img src="./t.png" class="tp">
   <name>Quizicall</name>
@@ -187,28 +205,28 @@
   <disc>Uploaded 11/13/2021.<br></disc>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c10">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Protogen.jpg" alt="description">
   <img src="./t.png" class="tp">
   <date>Protogen</name>
   <date></date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c9">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/rabbit.jpg" alt="description">
   <img src="./t.png" class="tp">
   <name>Late For Class?</name>
   <date>11/15/2021</date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c8">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Scan2021-11-12_204731_003.jpg" alt="description">
   <img src="./t.png" class="tp">
   <name>Bit of Rule Ideas</name>
   <date></date>
 </figure>
 
-<figure onclick="Zoom3(this);" id="c6">
+<figure onclick="Zoom3(this);">
   <img src="./Images/Small/Housepets.jpg" alt="description">
   <img src="./t.png" class="tp">
   <name>Zach</name>
