Summer Sketches Part 2
Added more thumbnails and entries

--- a/gallery/Gallery.html
+++ b/gallery/Gallery.html
@@ -55,6 +55,42 @@
       <!-- ----- Start Gallery Table ----- -->
       <div class="Gallery">
 
+
+
+
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-august-bedroom.png">
+  <img src="./t.png" class="tp">
+  <name>Bed Sketch</name>
+  <date>August 2024</date>
+  <disc></disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-july-dew-page.png">
+  <img src="./t.png" class="tp">
+  <name>Dew Sketches</name>
+  <date>July 2024</date>
+  <disc>We actually traded pages halfway through.</disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-july-dm-page.png">
+  <img src="./t.png" class="tp">
+  <name>DM Sketches</name>
+  <date>July 2024</date>
+  <disc>We actually traded pages halfway through.</disc>
+</figure>
+
+<figure onclick="Zoom3(this);">
+  <img src="./Images/Small/2024-june-overlook.png">
+  <img src="./t.png" class="tp">
+  <name>Overlook</name>
+  <date>June 2024</date>
+  <disc></disc>
+</figure>
+
 <figure onclick="Zoom3(this);">
   <img src="./Images/Small/2024-july-dragon.png">
   <img src="./t.png" class="tp">
